--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta description="Vite App" />
-    <title>Vite App</title>
+    <meta name="description" content="Windows 98" />
+    <title>Windows 98</title>
   </head>
   <body>
     <div id="app"></div>
