change load of fonts

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Windows 98</title>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Windows 98" />
-    <title>Windows 98</title>
+    <link rel="icon" href="/favicon.ico" />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff"
+      href="fonts/MSSansSerifBold.woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="fonts/MSSansSerifBold.woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff"
+      href="fonts/MSSansSerifMedium.woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="fonts/MSSansSerifMedium.woff2"
+      crossorigin
+    />
   </head>
   <body>
     <div id="app"></div>
