fix(ds): import scss file in main and style dev env

--- a/core/design-system/@bundler/index.html
+++ b/core/design-system/@bundler/index.html
@@ -7,6 +7,12 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <style lang="css">
+      #root {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
