refactor(app): @bundler

--- a/app/@bundler/vite/index.html
+++ b/app/@bundler/vite/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" theme="light">
   <head>
     <title>Windows 98</title>
     <meta charset="UTF-8" />
@@ -22,7 +22,7 @@
     />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="./src/main.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
